--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.1",
+    "jsencrypt": "^3.3.2",
     "npm": "^9.6.5",
     "plasmo": "0.68.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@plasmohq/prettier-plugin-sort-imports": "3.6.4",
