--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.12.1",
+    "axios": "^1.3.6",
     "jsencrypt": "^3.3.2",
     "npm": "^9.6.5",
     "plasmo": "0.68.3",
